--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 /* :root {
   --accent-color: orangered;
@@ -17,7 +18,7 @@ body {
   transition: var(--transition-delay);
   background-image: linear-gradient(to right, var(--background-color), var(--background-color-2), var(--background-color-3));
   color: var(--text-color);
-  font-family: 'Roboto Condensed', sans-serif;
+  /* font-family: 'Roboto Condensed', sans-serif; */
   box-sizing: border-box;
 }
 
